--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -89,6 +89,31 @@ month={March}
 }
 
 
+@ARTICLE{
+	BiRNN,
+author={M. Schuster and K. K. Paliwal},
+journal={IEEE Transactions on Signal Processing},
+title={Bidirectional recurrent neural networks},
+year={1997},
+volume={45},
+number={11},
+pages={2673-2681},
+keywords={speech recognition;pattern classification;statistical analysis;recurrent neural nets;learning by example;speech processing;bidirectional recurrent neural networks;training;regular recurrent neural network;negative time direction;positive time direction;classification experiments;regression experiments;artificial data;phonemes;TIMIT database;conditional posterior probability;complete symbol sequences;real data;speech recognition;learning from examples;Recurrent neural networks;Artificial neural networks;Training data;Databases;Probability;Shape;Parameter estimation;Speech recognition;Control systems;Telecommunication control},
+doi={10.1109/78.650093},
+ISSN={1053-587X},
+month={Nov},
+}
+
+@article{
+BLEU,
+author = {Papineni, Kishore and Roukos, Salim and Ward, Todd and Zhu, Wei-jing},
+year = {2002},
+month = {10},
+pages = {},
+title = {BLEU: a Method for Automatic Evaluation of Machine Translation},
+doi = {10.3115/1073083.1073135}
+}
+
 
 @article{
 	Seq2Tree,
